[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pgi>=0.0.11.2",
    "pycairo>=1.28.0",
    "pygobject>=3.52.3",
    "python-weather>=2.1.0",
    "requests>=2.32.5",
    "typing-extensions>=4.14.1",
]
